fix: P2才报警